<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="2"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:gravity="center">

        <TextView
            android:id="@+id/horizontal_textview1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textviewHorizontal1" />

        <TextView
            android:id="@+id/horizontal_textview2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textviewHorizontal2" />

        <TextView
            android:id="@+id/horizontal_textview3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textviewHorizontal3" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        >

        <Button
            android:id="@+id/relative_button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonRelative5"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"/>

        <Button
            android:id="@+id/relative_button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonRelative4"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"/>

        <Button
            android:id="@+id/relative_button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonRelative3"
            android:layout_centerInParent="true"/>

        <Button
            android:id="@+id/relative_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonRelative2"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true" />

        <Button
            android:id="@+id/relative_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonRelative1"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:gravity="center">

        <TextView
            android:id="@+id/vertical_textview1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textviewVertical1" />

        <TextView
            android:id="@+id/vertical_textview2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textviewVertical2" />

        <TextView
            android:id="@+id/vertical_textview3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textviewVertical3" />
    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="1">

        <Button
            android:id="@+id/constraint_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonConstraint2"
            app:layout_constraintCircle="@id/constraint_button1"
            app:layout_constraintCircleAngle="0"
            app:layout_constraintCircleRadius="70dp"/>

        <Button
            android:id="@+id/constraint_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonConstraint1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

</GridLayout>